# TrafficLightRecognition

./: README.md
homework/: CMakeLists.txt
homework/src/: main.cpp
